--- a/full_setup/server/package.json
+++ b/full_setup/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^2.13.1",
     "apollo-server-express": "^2.13.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.0.0"
   }
