--- a/full_setup/server/package.json
+++ b/full_setup/server/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.13.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^15.0.0"
+    "graphql": "^15.0.0",
+    "uuid": "^8.1.0"
   }
 }
