--- a/full_setup/server/package.json
+++ b/full_setup/server/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
+    "pg": "^8.2.1",
+    "sequelize": "^5.21.11",
     "uuid": "^8.1.0"
   }
 }
